# uni_proj_traccia1

./: READ1E.md  README.md  digital_gym.sql  palestradigitale_documentazione.md  prova.cpp
palestra_digitale/: main.cpp
palestradigitale/: CMakeLists.txt  Main.qml  dbmanager.cpp  dbmanager.h  main.cpp
palestradigitale/qml/: AdminDashboard.qml  LoginPage.qml  ManageWorkoutProgramsPage.qml  NutritionPage.qml  RegisterPage.qml  SessionDetailPage.qml  SessionsPage.qml  UserProgressPage.qml  WorkoutProgramsPage.qml
